improve featured spirits on hp and fix flicker bug

--- a/app/assets/stylesheets/pages/component-page.scss
+++ b/app/assets/stylesheets/pages/component-page.scss
@@ -222,17 +222,23 @@ $space-between-description-and-header: 6px;
     }
   }
 
-  &__illustration {
-    mix-blend-mode: multiply;
+  &__illustration-container {
     width: 275px;
     height: 275px;
     float: right;
     shape-outside: circle(58% at 123px 185px);
-    object-fit: contain;
     margin: 2em -9em 0 0;
     padding-top: 1.5em;
     box-sizing: content-box;
     clear: right;
+    background: #f0f0f0;
+  }
+
+  &__illustration {
+    mix-blend-mode: multiply;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 
   &__description {
